feat: add Prettier, Husky and lint-staged for code quality

--- a/content/blog/guia-seo-principiantes.mdx
+++ b/content/blog/guia-seo-principiantes.mdx
@@ -12,39 +12,101 @@ import Callout from '@/components/Callout';
 import Image from 'next/image';
 
 {/* Hero Section */}
+
 <div className="grid grid-cols-1 md:grid-cols-2 gap-8 lg:gap-12 items-center mb-16">
   <div className="md:flex-1">
-    <h1 className="text-4xl md:text-5xl font-extrabold text-blue-400 leading-tight">Guía Definitiva de SEO para Principiantes</h1>
-    <p className="mt-4 text-lg text-gray-400">Domina Google y Atrae Clientes Sin Pagar Publicidad</p>
+    <h1 className="text-4xl md:text-5xl font-extrabold text-blue-400 leading-tight">
+      Guía Definitiva de SEO para Principiantes
+    </h1>
+    <p className="mt-4 text-lg text-gray-400">
+      Domina Google y Atrae Clientes Sin Pagar Publicidad
+    </p>
   </div>
   <div className="mt-6 md:mt-0">
     <div className="rounded-lg overflow-hidden shadow-2xl">
-      <Image src="/imagenes/hoja-de-ruta-seo.png" alt="Una brújula digital apuntando hacia la palabra SEO, sobre un mapa estelar que representa el complejo mundo de internet y el posicionamiento web." width={800} height={450} priority className="object-cover" />
+      <Image
+        src="/imagenes/hoja-de-ruta-seo.png"
+        alt="Una brújula digital apuntando hacia la palabra SEO, sobre un mapa estelar que representa el complejo mundo de internet y el posicionamiento web."
+        width={800}
+        height={450}
+        priority
+        className="object-cover"
+      />
     </div>
-    <p className="text-center text-sm text-gray-400 mt-2">Tu hoja de ruta para navegar el universo del SEO y alcanzar las primeras posiciones en Google.</p>
+    <p className="text-center text-sm text-gray-400 mt-2">
+      Tu hoja de ruta para navegar el universo del SEO y alcanzar las primeras
+      posiciones en Google.
+    </p>
   </div>
 </div>
 
-<p className="text-lg leading-8">¿Alguna vez te has preguntado cómo algunas páginas web aparecen mágicamente en los primeros resultados de Google mientras otras se pierden en el abismo digital? No es magia, es ciencia. Se llama <strong>SEO (Search Engine Optimization)</strong>, y es una de las herramientas más poderosas para hacer crecer un negocio, una marca o un proyecto en el mundo online.</p>
-<p className="text-lg leading-8">Si la palabra "SEO" te suena a un lenguaje técnico y complejo, ¡tranquilo! Has llegado al lugar correcto. En esta guía educativa, desmitificaremos el SEO de una vez por todas. Vamos a transformar lo complicado en comprensible y lo teórico en acciones prácticas que puedes empezar a aplicar hoy mismo. Prepárate para descubrir cómo convertir tu sitio web en un imán de visitantes.</p>
+<p className="text-lg leading-8">
+  ¿Alguna vez te has preguntado cómo algunas páginas web aparecen mágicamente en
+  los primeros resultados de Google mientras otras se pierden en el abismo
+  digital? No es magia, es ciencia. Se llama{' '}
+  <strong>SEO (Search Engine Optimization)</strong>, y es una de las
+  herramientas más poderosas para hacer crecer un negocio, una marca o un
+  proyecto en el mundo online.
+</p>
+<p className="text-lg leading-8">
+  Si la palabra "SEO" te suena a un lenguaje técnico y complejo, ¡tranquilo! Has
+  llegado al lugar correcto. En esta guía educativa, desmitificaremos el SEO de
+  una vez por todas. Vamos a transformar lo complicado en comprensible y lo
+  teórico en acciones prácticas que puedes empezar a aplicar hoy mismo.
+  Prepárate para descubrir cómo convertir tu sitio web en un imán de visitantes.
+</p>
 
 ---
 
 <nav className="my-12 p-6 bg-gray-800 rounded-xl border border-gray-700">
-  <h2 className="text-xl font-bold text-white mt-0 mb-4 flex items-center"><i className="fas fa-list-ol mr-3"></i>Contenido del Artículo</h2>
+  <h2 className="text-xl font-bold text-white mt-0 mb-4 flex items-center">
+    <i className="fas fa-list-ol mr-3"></i>Contenido del Artículo
+  </h2>
   <ol className="list-decimal ml-5 text-blue-400 space-y-2">
-    <li><a className="hover:text-blue-300 hover:underline" href="#1-que-es-el-seo-y-por-que-es-el-superpoder-que-tu-web-necesita">¿Qué es el SEO y por qué es el superpoder que tu web necesita?</a></li>
     <li>
-      <a className="hover:text-blue-300 hover:underline" href="#2-los-3-pilares-fundamentales-del-seo-la-santisima-trinidad-del-posicionamiento">Los 3 Pilares Fundamentales del SEO</a>
+      <a
+        className="hover:text-blue-300 hover:underline"
+        href="#1-que-es-el-seo-y-por-que-es-el-superpoder-que-tu-web-necesita"
+      >
+        ¿Qué es el SEO y por qué es el superpoder que tu web necesita?
+      </a>
+    </li>
+    <li>
+      <a
+        className="hover:text-blue-300 hover:underline"
+        href="#2-los-3-pilares-fundamentales-del-seo-la-santisima-trinidad-del-posicionamiento"
+      >
+        Los 3 Pilares Fundamentales del SEO
+      </a>
       <ul className="list-disc ml-5 mt-2 space-y-1">
-        <li><a className="hover:text-blue-300 hover:underline" href="#pilar-1-seo-tecnico-los-cimientos-invisibles-de-tu-casa-digital">Pilar 1: SEO Técnico</a></li>
-        <li><a className="hover:text-blue-300 hover:underline" href="#pilar-2-seo-on-page-el-arte-de-comunicarte-con-humanos-y-robots">Pilar 2: SEO On-Page</a></li>
+        <li>
+          <a
+            className="hover:text-blue-300 hover:underline"
+            href="#pilar-1-seo-tecnico-los-cimientos-invisibles-de-tu-casa-digital"
+          >
+            Pilar 1: SEO Técnico
+          </a>
+        </li>
+        <li>
+          <a
+            className="hover:text-blue-300 hover:underline"
+            href="#pilar-2-seo-on-page-el-arte-de-comunicarte-con-humanos-y-robots"
+          >
+            Pilar 2: SEO On-Page
+          </a>
+        </li>
       </ul>
     </li>
   </ol>
 </nav>
 
-<h2 id="1-que-es-el-seo-y-por-que-es-el-superpoder-que-tu-web-necesita" className="text-3xl font-bold flex items-center"><i className="fas fa-search text-blue-400 mr-3"></i>1. ¿Qué es el SEO y por qué es el superpoder que tu web necesita?</h2>
+<h2
+  id="1-que-es-el-seo-y-por-que-es-el-superpoder-que-tu-web-necesita"
+  className="text-3xl font-bold flex items-center"
+>
+  <i className="fas fa-search text-blue-400 mr-3"></i>1. ¿Qué es el SEO y por
+  qué es el superpoder que tu web necesita?
+</h2>
 
 ### Explicación Educativa: El Bibliotecario Digital que Trabaja para Ti
 
@@ -53,8 +115,17 @@ Imagina que internet es la biblioteca más grande del universo, con miles de mil
 El <strong>SEO</strong> es el arte y la ciencia de organizar el contenido de tu "libro" (tu página web) y de demostrarle al bibliotecario (Google) que tu receta de pizza no solo es buena, sino que es la más clara, la más deliciosa y la más útil de toda la biblioteca. Google, en su misión de ofrecer la mejor respuesta, revisará la estructura de tu libro, la calidad de tus ingredientes (el contenido) y cuántos otros libros de cocina reputados te recomiendan. Si haces bien este trabajo, el bibliotecario te colocará en el estante principal, a la vista de todos.
 
 <div className="my-8">
-  <Image src="/imagenes/seo-bibliotecario-recomendacion.png" alt="Ilustración de un amigable robot bibliotecario (representando a Google) entregando una página web con una medalla de oro a un usuario que está buscando información." width={700} height={400} className="object-cover rounded-lg shadow-lg mx-auto" />
-  <p className="text-center text-sm text-gray-400 mt-2">El SEO funciona como un bibliotecario que recomienda tu web como la mejor respuesta.</p>
+  <Image
+    src="/imagenes/seo-bibliotecario-recomendacion.png"
+    alt="Ilustración de un amigable robot bibliotecario (representando a Google) entregando una página web con una medalla de oro a un usuario que está buscando información."
+    width={700}
+    height={400}
+    className="object-cover rounded-lg shadow-lg mx-auto"
+  />
+  <p className="text-center text-sm text-gray-400 mt-2">
+    El SEO funciona como un bibliotecario que recomienda tu web como la mejor
+    respuesta.
+  </p>
 </div>
 
 ### ¿Por qué es tan crucial para tu proyecto?
@@ -69,29 +140,65 @@ En un mundo digital saturado, el SEO no es una opción, es una necesidad. He aqu
 Una pequeña tienda de zapatos artesanales en Madrid quiere vender más. En lugar de pagar por anuncios caros, optimiza su web para la búsqueda "zapatos de cuero hechos a mano en Madrid". Gracias al SEO, una persona que busca exactamente ese producto encuentra la tienda en la primera página de Google. Resultado: un cliente altamente cualificado que llega a su puerta digital sin que el dueño haya pagado un céntimo por ese clic.
 
 <Callout type="idea">
-  <strong>⭐ Consejo de Oro:</strong> No pienses en el SEO como un truco para engañar a Google. Piensa en él como un conjunto de buenas prácticas para mejorar la experiencia de tus usuarios. Si tus visitantes están contentos, Google también lo estará.
+  <strong>⭐ Consejo de Oro:</strong> No pienses en el SEO como un truco para
+  engañar a Google. Piensa en él como un conjunto de buenas prácticas para
+  mejorar la experiencia de tus usuarios. Si tus visitantes están contentos,
+  Google también lo estará.
 </Callout>
 
 ---
 
-<h2 id="2-los-3-pilares-fundamentales-del-seo-la-santisima-trinidad-del-posicionamiento" className="text-3xl font-bold flex items-center"><i className="fas fa-stream text-blue-400 mr-3"></i>2. Los 3 Pilares Fundamentales del SEO: La Santísima Trinidad del Posicionamiento</h2>
+<h2
+  id="2-los-3-pilares-fundamentales-del-seo-la-santisima-trinidad-del-posicionamiento"
+  className="text-3xl font-bold flex items-center"
+>
+  <i className="fas fa-stream text-blue-400 mr-3"></i>2. Los 3 Pilares
+  Fundamentales del SEO: La Santísima Trinidad del Posicionamiento
+</h2>
 
 Para que tu estrategia funcione, debes construirla sobre tres pilares sólidos. Si uno de ellos falla, toda la estructura se tambalea.
 
 <div className="my-8">
-  <Image src="/imagenes/tres-pilares-del-seo.png" alt="Infografía mostrando tres columnas robustas etiquetadas como 'SEO Técnico', 'SEO On-Page' y 'SEO Off-Page', sosteniendo juntas el éxito de un sitio web." width={700} height={400} className="object-cover rounded-lg shadow-lg mx-auto" />
-  <p className="text-center text-sm text-gray-400 mt-2">Los tres pilares que sostienen una estrategia de SEO exitosa: Técnico, On-Page y Off-Page.</p>
+  <Image
+    src="/imagenes/tres-pilares-del-seo.png"
+    alt="Infografía mostrando tres columnas robustas etiquetadas como 'SEO Técnico', 'SEO On-Page' y 'SEO Off-Page', sosteniendo juntas el éxito de un sitio web."
+    width={700}
+    height={400}
+    className="object-cover rounded-lg shadow-lg mx-auto"
+  />
+  <p className="text-center text-sm text-gray-400 mt-2">
+    Los tres pilares que sostienen una estrategia de SEO exitosa: Técnico,
+    On-Page y Off-Page.
+  </p>
 </div>
 
-<h3 id="pilar-1-seo-tecnico-los-cimientos-invisibles-de-tu-casa-digital" className="text-2xl font-bold flex items-center mt-8"><i className="fas fa-cogs text-sky-400 mr-3"></i>Pilar 1: SEO Técnico - Los Cimientos Invisibles de tu Casa Digital</h3>
+<h3
+  id="pilar-1-seo-tecnico-los-cimientos-invisibles-de-tu-casa-digital"
+  className="text-2xl font-bold flex items-center mt-8"
+>
+  <i className="fas fa-cogs text-sky-400 mr-3"></i>Pilar 1: SEO Técnico - Los
+  Cimientos Invisibles de tu Casa Digital
+</h3>
 
 El SEO técnico es todo lo que ocurre "tras bambalinas". No es lo que tus usuarios ven a simple vista, pero es fundamental para que los motores de búsqueda puedan rastrear, entender y valorar tu sitio web correctamente.
 
-<strong>Analogía educativa:</strong> Imagina que construyes la casa más bonita del mundo, con una decoración increíble. Pero si los cimientos son débiles, las tuberías están rotas o no hay una puerta de entrada clara, nadie podrá entrar a disfrutarla, y mucho menos el inspector de calidad (Google).
+<strong>Analogía educativa:</strong> Imagina que construyes la casa más bonita
+del mundo, con una decoración increíble. Pero si los cimientos son débiles, las
+tuberías están rotas o no hay una puerta de entrada clara, nadie podrá entrar a
+disfrutarla, y mucho menos el inspector de calidad (Google).
 
 <div className="my-8">
-  <Image src="/imagenes/fundamentos-seo-tecnico.png" alt="Diagrama de los planos de una casa, enfocándose en los cimientos, donde cada bloque tiene un ícono representando velocidad, seguridad HTTPS y diseño móvil." width={700} height={400} className="object-cover rounded-lg shadow-lg mx-auto" />
-  <p className="text-center text-sm text-gray-400 mt-2">El SEO Técnico: los cimientos invisibles pero esenciales para que Google te encuentre.</p>
+  <Image
+    src="/imagenes/fundamentos-seo-tecnico.png"
+    alt="Diagrama de los planos de una casa, enfocándose en los cimientos, donde cada bloque tiene un ícono representando velocidad, seguridad HTTPS y diseño móvil."
+    width={700}
+    height={400}
+    className="object-cover rounded-lg shadow-lg mx-auto"
+  />
+  <p className="text-center text-sm text-gray-400 mt-2">
+    El SEO Técnico: los cimientos invisibles pero esenciales para que Google te
+    encuentre.
+  </p>
 </div>
 
 #### Elementos Clave Explicados:
@@ -102,7 +209,9 @@ El SEO técnico es todo lo que ocurre "tras bambalinas". No es lo que tus usuari
   - **Recurso Gratuito:** [Google PageSpeed Insights](https://pagespeed.web.dev/). Simplemente introduce tu URL y te dirá qué tan rápida es tu web y te dará consejos específicos para mejorarla.
 
 <Callout type="success">
-  <strong>🚀 Tip de Velocidad:</strong> Comprime las imágenes antes de subirlas a tu web. Herramientas online como TinyPNG o Squoosh son fantásticas para esto y no requieren conocimientos técnicos.
+  <strong>🚀 Tip de Velocidad:</strong> Comprime las imágenes antes de subirlas
+  a tu web. Herramientas online como TinyPNG o Squoosh son fantásticas para esto
+  y no requieren conocimientos técnicos.
 </Callout>
 
 - **Diseño Adaptable (Mobile-First Indexing):**
@@ -110,7 +219,9 @@ El SEO técnico es todo lo que ocurre "tras bambalinas". No es lo que tus usuari
   - **Ejemplo:** Un blog de viajes puede tener un diseño espectacular en un ordenador, pero si en un móvil el texto es diminuto, los botones están muy juntos y es imposible navegar, Google lo considerará una mala experiencia y lo penalizará.
 
 <Callout type="success">
-  <strong>📱 Tip Mobile-First:</strong> Prueba tu web desde tu propio teléfono. ¿Puedes leer todo fácilmente? ¿Es sencillo hacer clic en los menús? Pide a un amigo que lo haga y te dé su opinión honesta.
+  <strong>📱 Tip Mobile-First:</strong> Prueba tu web desde tu propio teléfono.
+  ¿Puedes leer todo fácilmente? ¿Es sencillo hacer clic en los menús? Pide a un
+  amigo que lo haga y te dé su opinión honesta.
 </Callout>
 
 - **Seguridad (SSL/HTTPS):**
@@ -118,22 +229,44 @@ El SEO técnico es todo lo que ocurre "tras bambalinas". No es lo que tus usuari
   - **¿Por qué importa?** Google ha confirmado que el HTTPS es un factor de posicionamiento. Prioriza los sitios seguros para proteger a sus usuarios.
 
 <Callout type="success">
-  <strong>🔒 Tip de Seguridad:</strong> La mayoría de los proveedores de hosting hoy en día ofrecen certificados SSL gratuitos con un solo clic. Actívalo desde tu panel de control o contacta a tu proveedor. ¡No hay excusa para no tenerlo!
+  <strong>🔒 Tip de Seguridad:</strong> La mayoría de los proveedores de hosting
+  hoy en día ofrecen certificados SSL gratuitos con un solo clic. Actívalo desde
+  tu panel de control o contacta a tu proveedor. ¡No hay excusa para no tenerlo!
 </Callout>
 
 **Recursos Técnicos Adicionales:**
+
 - [Web.dev](https://web.dev/): Una plataforma de Google con guías exhaustivas para mejorar la salud técnica de tu sitio.
 - [Google Search Console](https://search.google.com/search-console/about): La herramienta gratuita indispensable. Te alerta sobre errores técnicos que Google encuentra en tu web para que puedas solucionarlos.
 
-<h3 id="pilar-2-seo-on-page-el-arte-de-comunicarte-con-humanos-y-robots" className="text-2xl font-bold flex items-center mt-8"><i className="fas fa-file-alt text-sky-400 mr-3"></i>Pilar 2: SEO On-Page - El Arte de Comunicarte con Humanos y Robots</h3>
+<h3
+  id="pilar-2-seo-on-page-el-arte-de-comunicarte-con-humanos-y-robots"
+  className="text-2xl font-bold flex items-center mt-8"
+>
+  <i className="fas fa-file-alt text-sky-400 mr-3"></i>Pilar 2: SEO On-Page - El
+  Arte de Comunicarte con Humanos y Robots
+</h3>
 
 Si el SEO técnico son los cimientos, el SEO On-Page es la arquitectura, el diseño de interiores y la señalización de tu casa. Se centra en optimizar el contenido visible de tus páginas para que sea una experiencia excepcional tanto para tus visitantes como para Google.
 
-<strong>Explicación educativa:</strong> Se trata de hablar dos idiomas a la vez. Por un lado, creas contenido valioso, claro y atractivo para tus lectores humanos. Por otro, usas "pistas" estratégicas (palabras clave, encabezados, etc.) para que los robots de Google entiendan perfectamente de qué trata cada página.
+<strong>Explicación educativa:</strong> Se trata de hablar dos idiomas a la vez.
+Por un lado, creas contenido valioso, claro y atractivo para tus lectores
+humanos. Por otro, usas "pistas" estratégicas (palabras clave, encabezados,
+etc.) para que los robots de Google entiendan perfectamente de qué trata cada
+página.
 
 <div className="my-8">
-  <Image src="/imagenes/estructura-seo-on-page.png" alt="Una página web perfectamente estructurada con etiquetas señalando el título H1, los subtítulos H2, una meta descripción atractiva y contenido de alta calidad." width={700} height={400} className="object-cover rounded-lg shadow-lg mx-auto" />
-  <p className="text-center text-sm text-gray-400 mt-2">Optimizar el SEO On-Page es como organizar tu contenido para enamorar a tus lectores.</p>
+  <Image
+    src="/imagenes/estructura-seo-on-page.png"
+    alt="Una página web perfectamente estructurada con etiquetas señalando el título H1, los subtítulos H2, una meta descripción atractiva y contenido de alta calidad."
+    width={700}
+    height={400}
+    className="object-cover rounded-lg shadow-lg mx-auto"
+  />
+  <p className="text-center text-sm text-gray-400 mt-2">
+    Optimizar el SEO On-Page es como organizar tu contenido para enamorar a tus
+    lectores.
+  </p>
 </div>
 
 #### Elementos Esenciales con Ejemplos:
@@ -150,7 +283,9 @@ Si el SEO técnico son los cimientos, el SEO On-Page es la arquitectura, el dise
   - **Ejemplo efectivo:** `"🎸 ¿Quieres aprender a tocar la guitarra? Clases para principiantes con un método probado y divertido. ¡Tu primera clase es gratis! Reserva tu plaza ahora."`
 
 <Callout type="idea">
-  <strong>✍️ Tip para Meta Descripciones:</strong> Incluye una llamada a la acción (CTA). Anima al usuario a hacer algo: "Descúbrelo aquí", "Compra ahora", "Reserva tu plaza".
+  <strong>✍️ Tip para Meta Descripciones:</strong> Incluye una llamada a la
+  acción (CTA). Anima al usuario a hacer algo: "Descúbrelo aquí", "Compra
+  ahora", "Reserva tu plaza".
 </Callout>
 
 - **Encabezados (H1, H2, H3): El Índice de tu Contenido**
@@ -167,16 +302,28 @@ Si el SEO técnico son los cimientos, el SEO On-Page es la arquitectura, el dise
   - **Trustworthiness (Confiabilidad):** ¿La información es precisa y fiable? ¿El sitio es seguro?
 
 <div className="my-8">
-  <Image src="/imagenes/concepto-eat-google.png" alt="Tres medallas o escudos ilustrados: uno con un cerebro (Experiencia), otro con una corona (Autoridad) y el último con un candado (Confiabilidad), representando el concepto E-A-T de Google." width={700} height={400} className="object-cover rounded-lg shadow-lg mx-auto" />
-  <p className="text-center text-sm text-gray-400 mt-2">El sello de calidad E-A-T: Experiencia, Autoridad y Confiabilidad.</p>
+  <Image
+    src="/imagenes/concepto-eat-google.png"
+    alt="Tres medallas o escudos ilustrados: uno con un cerebro (Experiencia), otro con una corona (Autoridad) y el último con un candado (Confiabilidad), representando el concepto E-A-T de Google."
+    width={700}
+    height={400}
+    className="object-cover rounded-lg shadow-lg mx-auto"
+  />
+  <p className="text-center text-sm text-gray-400 mt-2">
+    El sello de calidad E-A-T: Experiencia, Autoridad y Confiabilidad.
+  </p>
 </div>
 
-  **Ejemplo:** Un artículo sobre "cómo recuperarse de una lesión de rodilla" escrito por un fisioterapeuta titulado (con su biografía y credenciales visibles) tendrá un E-A-T infinitamente mayor que un artículo anónimo en un blog genérico.
+**Ejemplo:** Un artículo sobre "cómo recuperarse de una lesión de rodilla" escrito por un fisioterapeuta titulado (con su biografía y credenciales visibles) tendrá un E-A-T infinitamente mayor que un artículo anónimo en un blog genérico.
 
 <Callout type="warning">
-  <strong>💡 Tip de Contenido:</strong> No escribas para Google, escribe para tu lector. Responde a sus preguntas, resuelve sus problemas y ofrécele un valor que no encuentre en otro lugar. Investiga qué preguntan los usuarios en foros como Reddit o Quora sobre tu tema para obtener ideas.
+  <strong>💡 Tip de Contenido:</strong> No escribas para Google, escribe para tu
+  lector. Responde a sus preguntas, resuelve sus problemas y ofrécele un valor
+  que no encuentre en otro lugar. Investiga qué preguntan los usuarios en foros
+  como Reddit o Quora sobre tu tema para obtener ideas.
 </Callout>
 
 **Recursos On-Page Esenciales:**
+
 - [Google's SEO Starter Guide](https://developers.google.com/search/docs/fundamentals/seo-starter-guide): La guía oficial de Google. Lectura obligada.
 - [Yoast SEO Blog](https://yoast.com/blog/): Uno de los blogs más reconocidos, con guías prácticas y fáciles de seguir, especialmente si usas WordPress.
